- Added virtual hosting capabilities (Tomcat only)
- Added W3C log appender for logback modeled after FMS log events and categories
- Added the ability to unload a context using the ContextLoader
- Added RTMPS support (Jira SN-69)
- Set default J2EE servlet container / HTTP server to Tomcat
- Added Flex based application installer for red5 web applications
- Added War auto-deployer service
- Added additional MP3 ID3 data to the onMetaData event 

Bugfixes:
- RTMPProtocolDecoder fixed to support RSO sendMessage (Jira CODECS-9)
- Fixed Tomcat logging problem
- Fixed memory leak in ServiceUtils
- Fixed connection timeout (Jira SN-95 / APPSERVER-274)
- Resolved exception with WarLoaderServlet (Jira APPSERVER-224)
- Resolved log directory issue (Jira APPSERVER-246)
- Resolved ServerStream issue with w3c logging (Jira APPSERVER-263)
- Added patch to support ability to implement IBroadcastStream for custom streaming protocols (Jira SN-87)
- Resolved OSX connection problem with players > version 9,0,115
- Added patch for InvocationTargetException on missing files (Jira SN-99 and SN-97)
- Fixed a small issue with stream ids > 100
- Added patch for flv metadata handling
- Added patch for RTMPT client
- Added patch for start and stop scripts

Other:
- Split demos and flash sources into their own top level directories
- Added application snapshot repository


Red5 0.7.0  (2008-02-23)
------------------------
New Features:
- Initial Edge/Origin clustering support for multiple Edges with a single
  Origin (Jira APPSERVER-66)	
- Added stream listeners that can get notified about received packets
- Support for server-side Javascript (Jira APPSERVER-169)
- Added new base class org.red5.server.adapter.MultiThreadedApplicationAdapter
  that allows multiple clients to connect simultaneously to the same
  application
- Added new Flash Player 9 statuses NetStream.Play.FileStructureInvalid and 
  NetStream.Play.NoSupportedTrackFound
- New Flex admin tool (Jira APPSERVER-242)

Bugfixes: